moar spacing fixes!

--- a/app/assets/stylesheets/reports.scss
+++ b/app/assets/stylesheets/reports.scss
@@ -5,6 +5,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding-bottom: 1rem;
   border-bottom: 1px solid $theme-color-primary-light;
 
   & > h2 {
